@@ -1,6 +1,6 @@
 a
 altGlyph
-#if 0 
+#if 0
 altGlyphDef
 altGlyphItem
 #endif
